--- a/app/views/data_explorer/dimensional/results/table/_group_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_group_row.html.erb
@@ -15,8 +15,8 @@
     <% @composition.metrics.each do |metric| %>
       <% if @composition.groups[0].summable?(metric) %>
         <% total = @composition.results.get_total(metric, @composition.groups[0], group_1_member) %>
-        <% min = @composition.results.get_min(metric, @composition.groups[0], group_1_member) %>
-        <% max = @composition.results.get_max(metric, @composition.groups[0], group_1_member) %>
+        <% min = @composition.results.get_min(metric, @composition.groups[0], group_1_member) || 0 %>
+        <% max = @composition.results.get_max(metric, @composition.groups[0], group_1_member) || 0 %>
         <% range = max - min %>
 
         <td title="Min: <%= number_with_delimiter(min) %>&#013;Max: <%= number_with_delimiter(max) %>&#013;Range: <%= number_with_delimiter(range) %>"><%= number_with_delimiter total %></td>
