Force UTC for truncates

--- a/app/queries/big_query/dimensional.sql.erb
+++ b/app/queries/big_query/dimensional.sql.erb
@@ -99,7 +99,7 @@ downloads_in_range AS (
     if group.extract
       selects << "EXTRACT(#{group.extract} FROM #{selector}) AS #{group.as}"
     elsif group.truncate
-      selects << %Q(TIMESTAMP_TRUNC(#{selector}, #{group.truncate}, "UTC") AS #{group.as})
+      selects << %Q(FORMAT_TIMESTAMP("%Y-%m-%d %H:%M:%S %Ez", TIMESTAMP_TRUNC(#{selector}, #{group.truncate}, "UTC"), "UTC") AS #{group.as})
     elsif group.indices
       cases = []
 
