Add default column header for comparisons

--- a/app/views/data_explorer/time_series/results/table/_comparison_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_comparison_headers.html.erb
@@ -14,7 +14,7 @@
         <% end %>
       <% end %>
 
-      <th><%= @composition.comparisons.first.period %> -0</th>
+      <th><%= @composition.comparisons.first&.period || "Now" %> -0</th>
     <% end %>
   <% end %>
 </tr>
