--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: @composition, url: "/", method: :get, id: "data-explorer" do |form| %>
-  <div id="global-data-parameters">
+<%= form_with model: @composition, url: "/", method: :get, id: "data-explorer", class: "row" do |form| %>
+  <div id="global-data-parameters" class="col-2">
     <fieldset>
       <legend>Composition Errors</legend>
 
@@ -131,7 +131,7 @@
     </fieldset>
   </div>
 
-  <div id="lens">
+  <div id="lens" class="col-10">
     <div id="lens-data-parameters">
       <fieldset id="lens-type" <%= html_attributes(class: "field_with_errors") if @composition.errors.include?(:lens) %>>
         <legend>Lens Type</legend>
@@ -268,5 +268,5 @@
     </div>
   </div>
 
-  <%= form.submit "Submit" %>
+  <%= form.submit "Submit", class: "fixed-bottom" %>
 <% end %>
