feat(shared-nav): add

--- a/app/views/data_explorer/dimensional/_results.html.erb
+++ b/app/views/data_explorer/dimensional/_results.html.erb
@@ -16,7 +16,7 @@
 # 4. Cells for each metric where group 2 is NULL
 %>
 
-<table>
+<table class="table">
   <colgroup>
     <%# Group 1 member labels %>
     <col>
