--- a/app/views/data_explorer/time_series/results/table/_0_groups.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_0_groups.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table class="table">
   <tr>
     <% @composition.results.granularity_unique_members.each do |member| %>
       <% colspan = @composition.metrics.size * (@composition.comparisons.reduce(0) { |sum, c| sum + c.lookback } + 1) %>
