--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= content_for?(:title) ? content_for(:title) : "Dovetail Insights" %></title>
-    <%= favicon_link_tag asset_path("favicon.ico") %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
+
+    <link rel="icon" href="https://media.prx.org/favicon/icon-32.ico" sizes="any">
+    <link rel="icon" href="https://media.prx.org/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="https://media.prx.org/favicon/icon-180.png">
+
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= yield :head %>
     <%= javascript_importmap_tags %>
   </head>
