--- a/app/queries/big_query/time_series.sql.erb
+++ b/app/queries/big_query/time_series.sql.erb
@@ -240,12 +240,10 @@ FROM downloads_in_range AS downloads
     bq_type = filter_def["BigQuery"]["Type"]
 
     # Filters with a `from` are ranges
-    # TODO `from` is now only used for dates, I think. gte/lt would be used
-    # numbers, so the TIMESTAMP check is probably not necessary
     if filter.from
       # Wrap values for timestamp fields in quotes
-      from = bq_type == "TIMESTAMP" ? %Q("#{filter.from}") : filter.from
-      to = bq_type == "TIMESTAMP" ? %Q("#{filter.to}") : filter.to
+      from = %Q("#{filter.abs_from}")
+      to = %Q("#{filter.abs_to}")
 
       if filter.operator == :include
         wheres << "#{selector} >= #{from} AND #{selector} < #{to}"
